--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-<!-- your HTML goes here -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title> Resume </title>
+</head>
+<center>
+  <h1>
+    <u>My Resume </u>
+  </h1>
+</center>
+<div algin="right">
+<img src ="res.JPG"alt="my pic" width="100" height="100"  algin ="middle">
+<h3> Md Sayem </h3>
+</div>
+<h5>Ka-188/3 kuril Dhaka 1229</h5>
+<h5>sayem243@gmail.com</h5>
+<h5>Contact no :01674-539074</h5><hr>
+<h2>
+<u> Career Objective</u>
+</h2>
+<h3> Always be a core term player in achieving organizationl goals by dedicating and committing to full extent and hence grow and excel along with the organization
+</h3>
+<h2><u>Academic Qualification </u> </h2>
+
+<table border="5"width="110">
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
+
+
+
+  <tr>
+    <th>Qualification</th>
+    <th>Board/University</th>
+    <th>School/college</th>
+    <th>year of passing</th>
+    <th>Marks </th>
+  </tr>
+
+  <tr>
+    <th>CSE</th>
+    <th>Independent University,Bangladesh</th>
+    <th>Independent University,Bangladesh</th>
+      <th>2018</th>
+      <th>80%</th>
+  </tr>
+
+  <tr>
+    <th>HSC</th>
+    <th>Dhaka Board</th>
+    <th>Milestone College</th>
+      <th>2013</th>
+      <th>80%</th>
+  </tr>
+
+  <tr>
+    <th>SSC</th>
+    <th>Dhaka Board</th>
+    <th>Kurmitola High school and college </th>
+      <th>2011</th>
+      <th>80%</th>
+  </tr>
+
+</table>
+
+<h2>
+<ul><u>Technical Skills: </u></ul>
+</h2>
+
+ <ul>
+      <b>
+        <h3>
+    <li>Languages :C,C++,Java,c#</li>
+    <li>Database  :MySql</li>
+    <li>concepts  : operating system Basics,Linux      </li>
+        </h3>
+      </b>
+</ul>
+<h2><b><u> Personal Details: </u> </b> </h2>
+<ul>
+  <h3>
+    <li>Name: Md.Sayem </li>
+<li>Married: No </li>
+<li>Hobbies :  </li>
+<ul>
+  <li> Reading Novel </li>
+  <li> sports </li>
+</li>Journey </li>
+<li> Gardening </li>
+</ul>
+  </h3>
+</ul>
+
+</html>
