--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <h5>sayem243@gmail.com</h5>
 <h5>Contact no :01674-539074</h5><hr>
 <h2>
+  <div style="background-color :purple;color:white;padding:05px">
 <u> Career Objective</u>
 </h2>
 <h3> Always be a core term player in achieving organizationl goals by dedicating and committing to full extent and hence grow and excel along with the organization
@@ -78,7 +79,8 @@ tr:nth-child(even) {
 </table>
 
 <h2>
-<ul><u>Technical Skills: </u></ul>
+    <div style="background-color :DarkKhaki  ;color:white;padding:0.05px">
+<ul><u>Technical Skills: </u></ul></div>
 </h2>
 
  <ul>
@@ -90,7 +92,9 @@ tr:nth-child(even) {
         </h3>
       </b>
 </ul>
-<h2><b><u> Personal Details: </u> </b> </h2>
+<h2>
+  <div style="background-color :DarkOrchid;color:white;padding:05px">
+  <b><u> Personal Details: </u> </b> </h2>
 <ul>
   <h3>
     <li>Name: Md.Sayem </li>
@@ -104,5 +108,13 @@ tr:nth-child(even) {
 </ul>
   </h3>
 </ul>
-
+<h2>
+  <div style="background-color :LightSkyBlue ;color:white;padding:05px">
+  <b><u> Additional Skills: </u> </b> </h2>
+<ul>
+  <h3>
+    <li> Ability to communicate with cross-functional teams</li>
+<li> Bilingual : Bengali ,English ,French  </li>
+  </h3>
+</ul>
 </html>
