--- a/index.html
+++ b/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title> Resume </title>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
+<body>
+  <center>
+    <div class="Main">
 <center>
+
+
   <h1>
     <u>My Resume </u>
   </h1>
 </center>
-<div algin="right">
+
+<div algin="left">
 <img src ="res.JPG"alt="my pic" width="100" height="100"  algin ="middle">
 <h3> Md Sayem </h3>
 </div>
-<h5>Ka-188/3 kuril Dhaka 1229</h5>
-<h5>sayem243@gmail.com</h5>
-<h5>Contact no :01674-539074</h5><hr>
+<h4>Ka-188/3 kuril Dhaka 1229</h4>
+<h4>sayem243@gmail.com</h4>
+<h4>Contact no :01674-539074</h4><hr>
+</center>
+</div>
+
+<center>
+  <div class="object">
+
 <h2>
-  <div style="background-color :purple;color:white;padding:05px">
-<u> Career Objective</u>
-</h2>
-<h3> Always be a core term player in achieving organizationl goals by dedicating and committing to full extent and hence grow and excel along with the organization
-</h3>
+    <u>CAREER OBJECTIVES</u>
+  </h2>
+  <h3>
+    <p>
+Always be a core term player in achieving organizationl goals by dedicating and committing to full extent and hence grow and excel along with the organization
+.</p>
+  </h3>
+</div>
+  </center>
+
+
+
+
+  <div class ="Acamdemic">
 <h2><u>Academic Qualification </u> </h2>
 
-<table border="5"width="110">
-<style>
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-</style>
+<table border="8"width="180">
 
 
 
@@ -53,7 +59,7 @@ tr:nth-child(even) {
   </tr>
 
   <tr>
-    <th>CSE</th>
+    <th>B.sc</th>
     <th>Independent University,Bangladesh</th>
     <th>Independent University,Bangladesh</th>
       <th>2018</th>
@@ -75,12 +81,14 @@ tr:nth-child(even) {
       <th>2011</th>
       <th>80%</th>
   </tr>
-
 </table>
+</div>
 
+
+
+<div class="skill">
 <h2>
-    <div style="background-color :DarkKhaki  ;color:white;padding:0.05px">
-<ul><u>Technical Skills: </u></ul></div>
+<ul><u>Technical Skills: </u></ul>
 </h2>
 
  <ul>
@@ -92,29 +100,49 @@ tr:nth-child(even) {
         </h3>
       </b>
 </ul>
+
+</div>
+
+
+        <div class="personal">
 <h2>
-  <div style="background-color :DarkOrchid;color:white;padding:05px">
-  <b><u> Personal Details: </u> </b> </h2>
-<ul>
-  <h3>
-    <li>Name: Md.Sayem </li>
-<li>Married: No </li>
-<li>Hobbies :  </li>
-<ul>
-  <li> Reading Novel </li>
-  <li> sports </li>
-</li>Journey </li>
-<li> Gardening </li>
+
+        <u>Personal Details</u>
+            </h2>
+            <ul>
+            <b>
+              <h3>
+                <div algin="left">
+              <li>Name : Md. Sayem</li>
+              <li>Age: 21</li>
+                <li>Married : No</li>
+                  <li>Hobbies: </li>
+                    <ul>
+                      <li> Reading Novel </li>
+                         <li> Gardening </li>
+                   <li> Travelling  </li>
+                      <li>Watching Movie</li>
+                      <li>Playing Cricket, Football</li>
 </ul>
-  </h3>
-</ul>
-<h2>
-  <div style="background-color :LightSkyBlue ;color:white;padding:05px">
-  <b><u> Additional Skills: </u> </b> </h2>
+                          </ul>
+                          </div>
+                        </h3>
+
+                    </div>
+
+
+
+
+<div class="Additional">
+  <h2><b><u> Additional Skills: </u> </b> </h2>
+
 <ul>
   <h3>
     <li> Ability to communicate with cross-functional teams</li>
 <li> Bilingual : Bengali ,English ,French  </li>
   </h3>
 </ul>
+
+</div>
+</body>
 </html>
