--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <title> Resume </title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <center>
